# JamesScape

./: Cargo.toml  Info.MD  README.md
src/: main.rs
src/client/: camera.rs  character.rs  effects.rs  indicators.rs  input.rs  mod.rs  network.rs  physics.rs  rendering.rs  terrain.rs  ui.rs
src/server/: database.rs  mod.rs  network.rs  world.rs
src/shared/: components.rs  entities.rs  messages.rs  mod.rs
src/systems/: combat.rs  combat_system.rs  economy.rs  inventory_system.rs  mod.rs  player.rs  quests.rs  skills.rs  skills_system.rs
